--- a/SwiftRadio/Base.lproj/Main.storyboard
+++ b/SwiftRadio/Base.lproj/Main.storyboard
@@ -531,7 +531,7 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="TZStationCellIdentifier" rowHeight="90" id="aKD-IH-hIN">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="TZStationCellIdentifier" rowHeight="90" id="aKD-IH-hIN" customClass="TZStationTableViewCell" customModule="SwiftRadio" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="90"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="aKD-IH-hIN" id="9lF-ic-8EB">
@@ -573,6 +573,11 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <connections>
+                                            <outlet property="descLabel" destination="Fpu-w3-g17" id="Sle-Uk-QMJ"/>
+                                            <outlet property="headImageView" destination="EWS-S1-wtl" id="HmR-aJ-hwP"/>
+                                            <outlet property="nameLabel" destination="cPa-tV-WYA" id="wzr-dW-rvD"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
